# AdvText2SQL

./: .env.example  .gitignore  CLAUDE.md  README.md  ambrosia_benchmark.py  bird_benchmark.py  bird_evaluate_only.py  practices_doc.md  pyproject.toml
.claude/: settings.local.json
ablation_results/feat_01_fk_pk/: ambrosia_query_results.json  bird_query_results.json  summary.txt
ablation_results/feat_02_column_statistics/: ambrosia_query_results.json  bird_query_results.json  summary.txt
ablation_results/feat_03_column_stats/: bird_query_results.json  summary.txt
ablation_results/feat_04_pg_stat_rowcount/: ambrosia_query_results.json  bird_query_results.json  summary.txt
ablation_results/feat_05_light_schema/: bird_query_results.json  summary.txt
ablation_results/feat_07_compact_stats/: bird_query_results.json  summary.txt
ablation_results/feat_09_schema_dump/: bird_query_results.json  summary.txt
benchmarks/: ambrosia.py  base.py  bird.py  evaluate.py  evaluate_ambrosia.py  evaluate_bird.py  evaluation.py  response.py  token_tracking.py
data/: ambrosia_large.json  ambrosia_small.json  ambrosia_train.json  bird_small.json  dev_queries.json  some_queries.json  test_permissions.py  train_queries.json
data/launch_db/: README.md  migrate.sh  unpack.sh
local/: check_if_plan_db_was_done.md  practices_doc.md  test.py
local/old/: README_personal.md  less_false_ambiguity_plan.md  (+4 more)
src/adv_text2sql/mcp_servers/text2sql_tool/: pyproject.toml
src/adv_text2sql/mcp_servers/text2sql_tool/src/: prompts.py  text2sql_implementation.py  utils.py
(+10 files in other folders)
