[project]
name = "partial-mcp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "pydantic-ai",
    "logfire",
    "pydantic-evals[logfire]",
    "autogen-agentchat",
    "autogen-ext",
    "openai",
    "tiktoken",
    "mcp",
    "fastmcp",
    "python-dotenv",
    "sqlglot",
    "tabulate",
    "pymupdf",
    "pandas",
    "python-docx",
    "openpyxl",
    "func_timeout",
]

[dependency-groups]
dev = [
    "ruff",
    "pyrefly",
    "pre-commit",
]
test = [
    "pytest",
]
client = [
    "autogen-agentchat",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/partial_mcp"]
