[project]
name = "text2sql-tool"
version = "0.1.1"
description = "text2sql tool for db querying"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "autogen-agentchat",
    "autogen-ext",
    "openai",
    "tiktoken",
    "mcp",
    "fastmcp",
    "python-dotenv",
    "sqlglot",
    "tabulate",
    "pymupdf",
    "pandas",
    "python-docx",
    "openpyxl",
]

[dependency-groups]
test = [
    "pytest",
]
client = [
    "autogen-agentchat",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
default-groups = "all"
